# services/disclosure_anchor/contracts/filing_api.openapi.yaml
@@ -268,6 +268,13 @@ components:
           - type: string
           - type: 'null'
           title: Semantic Key
+        semantic_keys:
+          anyOf:
+          - items:
+              type: string
+            type: array
+          - type: 'null'
+          title: Semantic Keys
         source_ref:
           anyOf:
           - type: string
@@ -299,6 +306,7 @@ components:
       - title
       - order_index
       - semantic_key
+      - semantic_keys
       - payload
       - content_hash
       - structure_hash
